Fix for title bar color misalignment and megamenu table background
(For Windows/Linux): The title bar color now inherits its background color to avoid the Windows window management controls being misaligned with the title bar.

The top bar in for the "recent files" menu is no longer an ugly, contrasty white.

--- a/themes/enhanced/notion-light-enhanced.css
+++ b/themes/enhanced/notion-light-enhanced.css
@@ -683,10 +683,13 @@ pre.CodeMirror-line {
     background: inherit;
 }
 
-.megamenu-menu,
-#top-titlebar, #top-titlebar *,
-.megamenu-content {
+.megamenu-menu, .megamenu-content {
 	background: var(--side-bar-bg-color);
+	color: var(--text-color);
+}
+
+#top-titlebar, #top-titlebar * {
+    background: inherit;
 	color: var(--text-color);
 }
 
@@ -703,4 +706,8 @@ megamenu-back-btn {
 .megamenu-menu-header:hover,
 .megamenu-menu-header:focus {
 	color: inherit;
+}
+
+.megamenu-menu-panel table tr:nth-child(2n + 1) {
+    background-color:  var(--side-bar-bg-color);
 }
